exercise_3/ingress.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      ingress.kubernetes.io/rewrite-target: /
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"ingress.kubernetes.io/rewrite-target":"/"},"name":"example-ingress","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"serviceName":"foo-service","servicePort":5678},"path":"/foo"},{"backend":{"serviceName":"bar-service","servicePort":5678},"path":"/bar"}]}}]}}
    creationTimestamp: "2019-12-20T14:14:30Z"
    generation: 5
    name: example-ingress
    namespace: default
    resourceVersion: "5849"
    selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/example-ingress
    uid: 2d2bcedd-1c8c-4916-8bed-337090e0788e
  spec:
    backend:
      serviceName: grafana
      servicePort: 3000
    rules:
    - http:
        paths:
        - backend:
            serviceName: foo-service
            servicePort: 5678
          path: /foo
        - backend:
            serviceName: bar-service
            servicePort: 5678
          path: /bar
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
